Closed Bug 1853727 Opened 2 years ago Closed 2 years ago

SVG circle objects not printed anymore when r is given as CSS property

Categories

(Core :: Printing: Output, defect)

Firefox 117
defect

Tracking

()

VERIFIED FIXED
119 Branch
Tracking Status
firefox-esr102 --- unaffected
firefox-esr115 --- unaffected
firefox117 --- wontfix
firefox118 --- verified
firefox119 --- verified

People

(Reporter: social-s, Assigned: longsonr)

References

(Regression)

Details

(Keywords: regression)

Attachments

(3 files)

Steps to reproduce:

<html>
<head>
<style>
circle {fill:white; stroke:black; stroke-width:1;}
circle.bug {r:100px}
</style>
</head>
<body>
<h3>firefox 117.0 svg circle print bug</h3>
<svg id="svgcircleprintbug" viewBox="-100 -100 400 400">
<circle class="bug" cx="0" cy="0" />
<circle cx="0" cy="0" style="r:70px" />
<circle cx="0" cy="0" r="40px" />
<text x="0" y="0">3 CIRCLES</text>
</svg>
</body>
</html>

Actual results:

When trying to print this page, only the inner circle, which has the r attribute explicitely given, is printed. The middle and outer circles, which have r defines as CSS properties, are not. This was still working in 116.0.2 and broke in 117.0

Expected results:

Middle and outer circles should be printed as well.

The Bugbug bot thinks this bug should belong to the 'Core::Printing: Output' component, and is moving the bug to that component. Please correct in case you think the bot is wrong.

Component: Untriaged → Printing: Output
Product: Firefox → Core
Status: UNCONFIRMED → NEW
Ever confirmed: true
Keywords: regression
Regressed by: 1843883

Set release status flags based on info from the regressing bug 1843883

:longsonr, since you are the author of the regressor, bug 1843883, could you take a look?

For more information, please visit BugBot documentation.

Attached file reporter's testcase
Assignee: nobody → longsonr
Flags: needinfo?(longsonr)
Pushed by longsonr@gmail.com: https://hg.mozilla.org/integration/autoland/rev/d60042e856fe elements that map to style and are not animated do not print correctly r=emilio
Created web-platform-tests PR https://github.com/web-platform-tests/wpt/pull/42080 for changes under testing/web-platform/tests
Status: NEW → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 119 Branch

Comment on attachment 9354085 [details]
Bug 1853727 - elements that map to style and are not animated do not print correctly r=emilio

Beta/Release Uplift Approval Request

  • User impact if declined: Some SVG won't print correctly.
  • Is this code covered by automated tests?: Yes
  • Has the fix been verified in Nightly?: Yes
  • Needs manual test from QE?: No
  • If yes, steps to reproduce: There's a testcase in the bug. Print Preview is enough to see that it doesn't render correctly when printing.
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): Only affects SVG printing code.
  • String changes made/needed:
  • Is Android affected?: Yes
Attachment #9354085 - Flags: approval-mozilla-beta?
Upstream PR merged by moz-wptsync-bot

Comment on attachment 9354085 [details]
Bug 1853727 - elements that map to style and are not animated do not print correctly r=emilio

Fx118 is now in release, changing uplift request to approval-mozilla-release

Attachment #9354085 - Flags: approval-mozilla-beta? → approval-mozilla-release?

The patch landed in nightly and beta is affected.
:longsonr, is this bug important enough to require an uplift?

  • If yes, please nominate the patch for beta approval.
  • If no, please set status-firefox118 to wontfix.

For more information, please visit BugBot documentation.

Flags: needinfo?(longsonr)
Flags: needinfo?(longsonr)
Flags: qe-verify+
QA Whiteboard: [qa-triaged]

Reproduced with Fx 119.0a1 (2023-09-12) on Windows 10.
Verified fixed with Fx 120.0a1(2023-10-01) and Fx 119.0b3 on Windows 10, Ubuntu22 and macOS 13.

Status: RESOLVED → VERIFIED
Flags: qe-verify+

Comment on attachment 9354085 [details]
Bug 1853727 - elements that map to style and are not animated do not print correctly r=emilio

Approved for our next 118 dot release, thanks.

Attachment #9354085 - Flags: approval-mozilla-release? → approval-mozilla-release+
Flags: qe-verify+

Verified fixed with Fx 118.0.2 on Windows 10 macOS 13 and Ubuntu 22.

Flags: qe-verify+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: