Bug 1853727 - elements that map to style and are not animated do not print correctly r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D188703